<resources>

    <string name="app_name">Pasbeli</string>
    <string name="title_history">Riwayat</string>
    <string name="edit_place_name">Nama tempat</string>
    <string name="nama_komoditas">Nama barangHarga</string>
    <string name="location_now">Lokasi sekarang</string>
    <string name="kirim_hasil">Kirim data</string>
    <string name="add_data">Tambahkan data</string>
    <string name="add_pasar">Tambahkan pasar</string>
    <string name="sign_out">Keluar</string>

    <string name="harga_komoditas">Harga %s</string>
    <string name="num_komoditas">%d komoditas</string>
    <string name="tmp_harga">mendata %s seharga %s</string>
    <string name="tmp_location">%s , %s</string>


    <string name="desc_logo">Pasbeli logo</string>
    <string name="desc_app">consumer price data collection</string>
    <string name="welcome_msg">Welcome to Pasbeli</string>

    <string name="choose_image">choose</string>
    <string name="go_to_permissions_settings">fa</string>
    <string name="permission_dialog">Accessing Storage and Camera Permissions required</string>
    <string name="action_settings">Settings</string>
    <string name="enter_a_name">Enter a Name</string>
    <string name="foto">foto</string>
    <string name="save">SAVE</string>
    <string name="tambahkan_pasar_baru">Tambahkan Pasar Baru</string>
    <string name="nama_pasar">Nama Pasar</string>
    <string name="namaPasarBaru">Nama Pasar Baru</string>
    <string name="alamat">Alamat</string>
    <string name="jenis_pasar">Jenis Pasar</string>
    <string name="posisi">Posisi</string>
    <string name="location_pasar">Lokasi Pasar</string>
    <string name="edit_nama_pasar_baru">Nama Pasar Baru</string>
    <string name="ID">Nama</string>
    <string name="IDName">Nama Pengguna</string>
    <string name="Password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="tambahkan_pasar_baru2">Tambah Layout 2</string>
    <string name="edit_admin">Perbarui Status Pasar</string>
    <string name="delete">Delete</string>
    <string name="verifikasi_pasar">Verifikasi Pasar</string>
    <string name="alamatPembuka">Alamat :</string>
    <string name="data_harga_belum_terverifikai">Data Harga Belum Terverifikai</string>
    <string name="data_terverifikasi">Data Terverifikasi</string>
    <string name="lihat_harga_pasar">Lihat Harga Pasar</string>
    <string name="tekan_lama_pada_item_untuk_mengferifikasi_dan_menghapus">Tekan Lama Pada Item untuk Memverifikasi dan Menghapus</string>
    <string name="mantap">mantap</string>
    <string name="masukkan_nama_dengan_user_dan_password_dengan_user">Masukkan Nama dengan \'User\' dan Password dengan \'User\' Untuk Pengguna Masyarakat</string>

</resources>
