<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="editVM"
            type="xyz.fadli.pasbeli.ui.editpasar.EditPasarViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/namaPasar"
                android:layout_width="match_parent"
                android:layout_height="108dp"
                android:gravity="center"
                android:text="@{editVM.nama}"
                android:textAllCaps="true"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="82dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/alamatPembuka"
                    android:layout_width="wrap_content"
                    android:layout_height="73dp"
                    android:text="@string/alamatPembuka"
                    android:textAlignment="textStart"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/alamatPasar"
                    android:layout_width="318dp"
                    android:layout_height="73dp"
                    android:text="@{editVM.alamat}"
                    android:textAlignment="textStart"
                    android:textSize="24sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/lokasiPasar"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:text="@{editVM.location}"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonConfirm"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/verifikasi_pasar"
                android:textSize="18sp"
                android:onClick="onButtonVerifikasi"/>

            <Button
                android:id="@+id/buttonDeleteEdit"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete"
                android:textSize="18sp"
                android:onClick="onButtonDelete"/>

        </LinearLayout>

    </LinearLayout>
</layout>